franchises/dfv/src/modules/homepage-cards/css/global.scss
/*
 * Mobile layout
 */

$card-arrow-size: 1rem;
$card-arrow-border: 0.2rem;

#qg-primary-content .qg-dfv-cards--type-top-arrow {

    .card-container {
        padding: 0 pxToRem(7) 0;
        margin-bottom: pxToRem(15);
        min-height: pxToRem(245);
    }

    a.card {
        display: block;
        text-decoration: none;
        height: 100%;
        color: inherit;
    }

    .card-title {
        margin-bottom: 0;
    }

    .card-arrow {
        display: none;
        width: pxToRem(30);
        height: pxToRem(30);
        position: relative;
        display: block;

        &:after,
        &:before {
            content: "";
            display: block;
            position: absolute;
        }

        &:before {
            top: 50%;
            right: pxToRem(5);
            width: $card-arrow-size;
            height: $card-arrow-size;
            transform-origin: 50% 50%;
            transform: translate(0, -($card-arrow-size / 2)) rotate(45deg);
            box-shadow: inset -#{$card-arrow-border} $card-arrow-border 0 0 $deep-blue;
            border-radius: 0 $card-arrow-size * 0.15 0 0;
        }

        &:after {
            top: 50%;
            right: pxToRem(5);
            width: $card-arrow-size * 1.3;
            height: $card-arrow-border;
            transform: translate(0, -($card-arrow-border / 2));
            background-color: $deep-blue;
        }

    }

    .card-top {
        margin-bottom: pxToRem(5);
    }

}

/*
 * Desktop layout
 */

@media screen and (min-width: $desktop) {

    #qg-primary-content .qg-dfv-cards--type-top-arrow {
        
        .card-container {
            padding: 0 pxToRem(15) 0;
            margin-bottom: pxToRem(30);
        }

        .card-top {
            display: flex;
        }

        .card-title {
            flex-grow: 1;
        }

        .card-arrow {
            display: block;
            flex-shrink: 0;
        }

    }

}

